# django-polylith

./: .flake8  .python-version  README.md  celery.sqlite  manage.py  pyproject.toml  workspace.toml
bases/api/: README.md  pyproject.toml
bases/api/src/api/: settings.py  urls.py  views.py
bases/cpackard/api/: __init__.py  asgi.py  manage.py  settings.py  urls.py  views.py  wsgi.py
bases/cpackard/auth_service/: __init__.py  asgi.py  manage.py  settings.py  urls.py  wsgi.py
bases/cpackard/processing_worker/: __init__.py  core.py
bases/demo_namespace/api/: __init__.py  asgi.py  manage.py  settings.py  urls.py  views.py  wsgi.py
components/choices/: pyproject.toml
components/choices/src/choices/: core.py  interface.py  models.py
components/choices/src/choices/migrations/: 0001_initial.py
components/cpackard/authentication/: apps.py  core.py  interface.py
components/cpackard/choices/: __init__.py  apps.py  core.py  interface.py
components/cpackard/choices_db/: apps.py  interface.py  types.py
components/cpackard/questions/: __init__.py  apps.py  core.py  interface.py  types.py
components/cpackard/questions/migrations/: 0001_initial.py
components/cpackard/surveys/: __init__.py  apps.py  core.py  models.py
components/cpackard/surveys/migrations/: 0001_initial.py
components/cpackard/users/: apps.py  core.py
components/demo_namespace/choices/: apps.py
components/demo_namespace/choices/migrations/: 0001_initial.py
components/demo_namespace/questions/: __init__.py  apps.py  core.py
components/polls/: README.md  pyproject.toml
components/polls/src/polls/: interface.py
components/polls/src/polls/migrations/: 0001_initial.py
components/questions/: pyproject.toml
components/questions/src/questions/: interface.py  models.py
components/questions/src/questions/migrations/: 0001_initial.py
development/: core.py  scripts.py  settings.py  urls.py
polylith_django/: asgi.py  settings.py  urls.py  wsgi.py
projects/api/: README.md  pyproject.toml
projects/api/api_project/: asgi.py  settings.py  urls.py  wsgi.py
projects/auth_service/: pyproject.toml
projects/monolith-api/: pyproject.toml
projects/processing_worker/: pyproject.toml
test/bases/cpackard/api/: test_core.py  test_views.py
test/bases/cpackard/auth_service/: test_core.py
test/bases/cpackard/processing_worker/: test_core.py
test/components/cpackard/choices/: test_core.py
test/components/cpackard/choices_db/: test_core.py
test/components/cpackard/questions/: test_core.py
test/components/cpackard/surveys/: test_core.py
test/components/demo_namespace/choices/: test_core.py
test/components/demo_namespace/questions/: test_core.py
