[tool.poetry]
name = "api_project"
version = "0.1.0"
description = "Sample project for all Components and the API base."
authors = ["Christian Packard <christian@cpacklabs.com>"]
readme = "README.md"
packages = [ { include = "api_project" } ]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
questions = { path = "../../components/questions/", develop = false }
choices = { path = "../../components/choices/", develop = false }
api = { path = "../../bases/api/", develop = false }

[tool.poetry.group.dev.dependencies]
django-extensions = {version = "^3.2.1"}
