[tool.poetry]
name = "auth_service"
version = "0.1.0"
description = ""
authors = ['Christian Packard <6462409+cpackard@users.noreply.github.com>']
license = ""

packages = [
         {include = "cpackard/authentication", from = "../../components"},
         {include = "cpackard/auth_service", from = "../../bases"},
]

[tool.poetry.dependencies]
python = "^3.10"
django-extensions = {version = "^3.2.1"}
djangorestframework = "^3.14.0"
djoser = "^2.1.0"
djangorestframework-simplejwt = "^5.2.2"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
