[tool.poetry]
name = "monolith-api"
version = "0.1.0"
description = ""
authors = ['Christian Packard <6462409+cpackard@users.noreply.github.com>']
license = ""

packages = [
         {include = "cpackard/choices", from = "../../components"},
         {include = "cpackard/questions", from = "../../components"},
         {include = "cpackard/surveys", from = "components"},
         {include = "cpackard/api", from = "../../bases"}
]

[tool.poetry.dependencies]
python = "^3.10"
pytz = "^2022.7.1"
django-extensions = {version = "^3.2.1"}

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
