[tool.poetry]
name = "processing_worker"
version = "0.1.0"
description = ""
authors = ['Christian Packard <6462409+cpackard@users.noreply.github.com>']
license = ""

packages = [
         {include = "cpackard/authentication", from = "../../components"},
         {include = "cpackard/processing_worker", from = "../../bases"},
]

[tool.poetry.dependencies]
python = "^3.10"
celery = "^5.2.7"
sqlalchemy = "^1.4.47"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
